@@ -1,4 +1,3 @@
-
 package com.dualexpress.service;
 
 import com.dualexpress.dto.ProduitDTO;
@@ -13,6 +12,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Locale;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,11 +27,18 @@ public class ProduitService {
         Restaurant r = restaurantRepo.findById(req.getRestaurantId())
                 .orElseThrow(() -> new RuntimeException("Restaurant introuvable"));
 
+        Categorie cat;
+        try {
+            cat = Categorie.valueOf(req.getCategorie().toUpperCase(Locale.ROOT));
+        } catch (Exception e) {
+            throw new RuntimeException("Catégorie invalide: " + req.getCategorie());
+        }
+
         Produit p = Produit.builder()
                 .nom(req.getNom())
                 .description(req.getDescription())
-                .prix(req.getPrix())
-                .categorie(Categorie.valueOf(req.getCategorie()))
+                .prix(req.getPrix()) // BigDecimal ✅
+                .categorie(cat)
                 .disponible(req.getDisponible())
                 .restaurant(r)
                 .build();
@@ -40,20 +48,42 @@ public class ProduitService {
     }
 
     public List<ProduitDTO> getAll() {
+        // ✅ compatible Java 8/11
         return repo.findAll().stream()
                 .map(ProduitMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<ProduitDTO> getByCategorie(String cat) {
-        return repo.findByCategorie(Categorie.valueOf(cat))
-                .stream().map(ProduitMapper::toDTO)
-                .toList();
+        Categorie categorie;
+        try {
+            categorie = Categorie.valueOf(cat.toUpperCase(Locale.ROOT));
+        } catch (Exception e) {
+            throw new RuntimeException("Catégorie invalide: " + cat);
+        }
+
+        return repo.findByCategorie(categorie)
+                .stream()
+                .map(ProduitMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     public List<ProduitDTO> getDisponibles() {
         return repo.findByDisponibleTrue().stream()
                 .map(ProduitMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    // ✅ endpoints utiles pour React (restaurant dashboard)
+    public List<ProduitDTO> getByRestaurant(Long restaurantId) {
+        return repo.findByRestaurantId(restaurantId).stream()
+                .map(ProduitMapper::toDTO)
+                .collect(Collectors.toList());
+    }
+
+    public List<ProduitDTO> getDisponiblesByRestaurant(Long restaurantId) {
+        return repo.findByRestaurantIdAndDisponibleTrue(restaurantId).stream()
+                .map(ProduitMapper::toDTO)
+                .collect(Collectors.toList());
     }
 }
