@@ -1,25 +1,24 @@
-
 package com.dualexpress.service;
 
 import com.dualexpress.dto.RestaurantDTO;
+import com.dualexpress.dto.request.RestaurantRequest;
 import com.dualexpress.mapper.RestaurantMapper;
-import com.dualexpress.model.Produit;
 import com.dualexpress.model.Restaurant;
-import com.dualexpress.repository.ProduitRepository;
 import com.dualexpress.repository.RestaurantRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class RestaurantService {
 
     private final RestaurantRepository repo;
-    private final ProduitRepository produitRepo;
 
-    public RestaurantDTO create(Restaurant restaurant) {
+    public RestaurantDTO create(RestaurantRequest req) {
+        Restaurant restaurant = RestaurantMapper.fromRequest(req);
         repo.save(restaurant);
         return RestaurantMapper.toDTO(restaurant);
     }
@@ -27,19 +26,12 @@ public class RestaurantService {
     public List<RestaurantDTO> getAll() {
         return repo.findAll().stream()
                 .map(RestaurantMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public RestaurantDTO getById(Long id) {
         return repo.findById(id)
                 .map(RestaurantMapper::toDTO)
                 .orElseThrow(() -> new RuntimeException("Restaurant introuvable"));
-    }
-
-    public void ajouterProduit(Long restaurantId, Produit produit) {
-        Restaurant r = repo.findById(restaurantId)
-                .orElseThrow();
-        produit.setRestaurant(r);
-        produitRepo.save(produit);
     }
 }
